--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
     <div class="loading-overlay" id="loadingOverlay">
         <div class="loading-video-container">
             <video class="loading-video" id="loadingVideo" autoplay>
-                <source src="https://streamable.com/z0ol1w" type="video/mp4">
+                <source src="https://d.uguu.se/RDRMfqDj.mp4" type="video/mp4">
             </video>
         </div>
     </div>
